--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -6,5 +6,11 @@
     "outDir": "dist",
     "rootDir": "src"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["dist/**/*"],
+  "references": [
+    {
+      "path": "../tuples"
+    }
+  ]
 }
