--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,7 @@
     "@bonsai/tuples": "*"
   },
   "devDependencies": {
-    "typescript": "*"
+    "typescript": "*",
+    "ts-node": "7.0.1"
   }
 }
