--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,7 +4,9 @@
     "target": "esnext",
     "composite": true,
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "experimentalDecorators": true,
+    "keyofStringsOnly": false
   },
   "include": ["src/**/*"],
   "exclude": ["dist/**/*"],
