Add bonsai-fluture package

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "description": "Core types and functions for Bonsai",
   "license": "MIT",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "@bonsai/tuples": "*"
   },
