Encode protocols as static methods, improve HKT refinement

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "@bonsai/tuples": "*"
+    "@bonsai/tuples": "*",
+    "fast-check": "*"
   },
   "devDependencies": {
     "typescript": "*",
