Extract IO monad to its own package

--- a/packages/io/tsconfig.json
+++ b/packages/io/tsconfig.json
@@ -5,14 +5,13 @@
     "composite": true,
     "outDir": "dist",
     "rootDir": "src",
-    "experimentalDecorators": true,
     "keyofStringsOnly": false
   },
-  "include": ["src/**/*", "../io/IO.test.ts", "../io/IO.ts"],
+  "include": ["src/**/*"],
   "exclude": ["dist/**/*"],
   "references": [
     {
-      "path": "../tuples"
+      "path": "../core"
     }
   ]
 }
