--- a/packages/optics/package.json
+++ b/packages/optics/package.json
@@ -17,6 +17,7 @@
     "jest": "23.6.0",
     "ts-jest": "23.10.5",
     "fast-check": "1.9.0",
+    "ts-node": "*",
     "typescript": "*"
   },
   "jest": {
