--- a/packages/kinds/tsconfig.json
+++ b/packages/kinds/tsconfig.json
@@ -5,14 +5,10 @@
     "composite": true,
     "outDir": "dist",
     "rootDir": "src",
-    "experimentalDecorators": true,
+    "declarationMap": true,
     "keyofStringsOnly": false
   },
-  "include": ["src/**/*", "../io/IO.test.ts", "../io/IO.ts"],
+  "include": ["src/**/*"],
   "exclude": ["dist/**/*"],
-  "references": [
-    {
-      "path": "../tuples"
-    }
-  ]
+  "references": []
 }
