--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "packages/*"
   ],
   "devDependencies": {
-    "typescript": "3.3.0-dev.20190110"
+    "typescript": "3.3.0-dev.20190110",
+    "jest": "23.6.0",
+    "@types/jest": "23.3.12",
+    "ts-jest": "23.10.5"
   },
   "resolutions": {
     "typescript": "3.3.0-dev.20190110"
