--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "packages/*"
   ],
   "devDependencies": {
-    "typescript": "3.3.0-dev.20190110",
-    "jest": "23.6.0",
     "@types/jest": "23.3.12",
-    "ts-jest": "23.10.5"
+    "jest": "23.6.0",
+    "ts-jest": "23.10.5",
+    "typescript": "3.3.0-dev.20190119"
   },
   "resolutions": {
-    "typescript": "3.3.0-dev.20190110"
+    "typescript": "3.3.0-dev.20190119"
   }
 }
