Update to typescript 3.5.1

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@types/jest": "24.0.13",
     "jest": "24.8.0",
     "ts-jest": "24.0.2",
-    "typescript": "3.5.0-dev.20190525"
+    "typescript": "3.5.1"
   },
   "resolutions": {
-    "typescript": "3.5.0-dev.20190525"
+    "typescript": "3.5.1"
   }
 }
