--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,6 +15,7 @@
     "fast-check": "*",
     "typescript": "*",
     "ts-node": "7.0.1",
+    "@types/node": "12.0.4",
     "jest": "*"
   },
   "jest": {
